--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "geojs": "0.12.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.17.1",
-    "reconcile.js": "github:matthewma7/reconcile.js"
+    "reconcile.js": "^1.3.2",
+    "bootstrap-slider": "^9.9.0"
   },
   "author": "",
   "license": ""
