--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "geojs": "0.12.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.17.1",
     "reconcile.js": "^1.3.2",
-    "bootstrap-slider": "^9.9.0"
+    "bootstrap-slider": "^9.9.0",
+    "babel-preset-react": "^6.24.1"
   },
   "author": "",
   "license": ""
