--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "moment": "^2.17.1",
     "reconcile.js": "^1.3.2",
     "bootstrap-slider": "^9.9.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "react-bootstrap-slider": "2.1.1"
   },
   "author": "",
   "license": ""
