--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "reconcile.js": "^1.3.2",
     "bootstrap-slider": "^9.9.0",
     "babel-preset-react": "^6.24.1",
-    "react-bootstrap-slider": "2.1.3"
+    "react-bootstrap-slider": "2.1.3",
+    "yamljs": "0.3.0"
   },
   "author": "",
   "license": ""
