--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "babel-preset-react": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap-slider": "^9.9.0",
     "eslint-plugin-react": "^7.4.0",
     "geojs": "0.12.1",
@@ -13,6 +14,8 @@
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-slider": "2.1.3",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "yamljs": "0.3.0"
   },
   "author": "",
