--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-slider": "2.1.3",
     "react-dom": "^16.0.0",
+    "redux-promise-middleware": "^5.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "yamljs": "0.3.0"
