--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-slider": "2.1.3",
+    "react-contextmenu": "^2.9.2",
     "react-dom": "^16.0.0",
     "redux-promise-middleware": "^5.0.0",
     "react-redux": "^5.0.6",
+    "redux-thunk": "^2.2.0",
     "redux": "^3.7.2",
     "yamljs": "0.3.0"
   },
