--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "babel-preset-react": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootbox": "^4.4.0",
     "bootstrap-slider": "^9.9.0",
     "eslint-plugin-react": "^7.4.0",
-    "geojs": "0.12.1",
+    "geojs": "^0.13.0",
     "hammerjs": "^2.0.8",
+    "mousetrap": "^1.6.1",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-slider": "2.1.3",
