--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-slider": "2.1.3",
     "react-contextmenu": "^2.9.2",
     "react-dom": "^16.2.0",
+    "react-plyr": "^1.8.1",
     "redux-promise-middleware": "^5.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.0",
