--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hammerjs": "^2.0.8",
     "mousetrap": "^1.6.1",
     "query-string": "^5.1.0",
+    "raven-js": "^3.25.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-bootstrap-slider": "2.1.3",
