--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootbox": "^4.4.0",
     "bootstrap-slider": "^9.9.0",
+    "core-js": "^2.5.7",
     "eslint-plugin-react": "^7.4.0",
     "geojs": "^0.16.0",
     "hammerjs": "^2.0.8",
     "mousetrap": "^1.6.1",
     "query-string": "^5.1.0",
-    "raven-js": "^3.25.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-bootstrap-slider": "2.1.3",
